example/kubernetes-dashboard/dashboard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: kubernetes-dashboard
  template:
    metadata:
      labels:
        app: kubernetes-dashboard
    spec:
      containers:
        - name: kubernetes-dashboard
          image: kubernetesui/dashboard:v2.2.0
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "1"    # CPU limit in cores
              memory: "512Mi"  # Memory limit in bytes
            requests:
              cpu: "1"    # CPU request in cores
              memory: "128Mi"  # Memory request in bytes
