example/kubernetes-dashboard/dashboard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app: kubernetes-dashboard
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
